--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>WebStudio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-  <link rel="stylesheet" href="./sass/main.min.css"/>
+  <!-- <link rel="stylesheet" href="./sass/main.min.css"/> -->
+  <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
   <header class="header">
@@ -33,6 +34,25 @@
         </li>
       </ul>
   </div>
+  <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg
+            width="24"
+            height="24"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </button>
   </header>
   <main>
     <section class="main main__bg">
@@ -44,7 +64,7 @@
     <section class="benefit">
       <div class="container section">
         <h2 style="display: none;">Beneficios</h2>
-        <ul class="benefit__list list">  
+        <ul class="benefit__list list p-0">  
           <li class="benefit__item">
             <ul class="benefit__list-icon list p-0">
             <li class="benefit__item-icon"><svg width="70px" height="70px"><use href="./images/icons.svg#icon-antena-1"></use></svg></li>
@@ -104,7 +124,7 @@
     <section class="team">
       <div class="container section">
         <h2 class="team__title">Nuestro Equipo</h2>
-          <ul class="team__list list">
+          <ul class="team__list list p-0">
             <li class="team__member">
               <img class="member__img" src="./images/team1.jpg" alt="Foto diseñador" width="270" height="260">
               <h3 class="member__name">Andrés Cubo</h3>
@@ -393,5 +413,46 @@
       </form>
     </div>
   </div>
+  <div class="menu-container js-menu-container" id="mobile-menu">
+    <button class="menu-toggle js-close-menu">
+      <svg
+        fill="currentColor"
+        viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+          clip-rule="evenodd"
+        ></path>
+      </svg>
+    </button>
+
+    <ul class="mobile-menu">
+      <li><a href="./index.html" class="mobile__link link">Studio</a></li>
+      <li><a href="./portfolio.html" class="mobile__link link">Portfolio</a></li>
+      <li><a href="" class="mobile__link link">Contacts</a></li>
+    </ul>
+    <ul class="mobile-menu">
+      <li class=""><a class="mobile__link mobile__link--tel" href="tel:+525555296000">+52 55 5529 6000</a></li>
+      <li class=""><a class="mobile__link mobile__link--email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    </ul>    
+    <ul class="mobile-menu mobile-menu--social">
+      <li><a href="" class="mobile__link mobile__link--social">Instagram</a></li>
+      <li><a href="" class="mobile__link mobile__link--social">Twitter</a></li>
+      <li><a href="" class="mobile__link mobile__link--social">Facebook</a></li>      
+      <li><a href="" class="mobile__link mobile__link--social border">LinkedIn</a></li>
+    </ul>
+  </div>
+
+  <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
 </body>
 </html>
