responsive mobile portfolio

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__section">
-      <ul class="footer__list list">
+      <ul class="footer__list list p-0">
         <li class="footer__item">
           <a class="footer__link" href="./index.html" rel="noopener noreferrer" target="_self">WebStudio</a></li>
         <li class="footer__item">
