--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
   <div class="menu-container js-menu-container" id="mobile-menu">
     <button class="menu-toggle js-close-menu">
       <svg
-        fill="currentColor"
+        class="menu-img"
         viewBox="0 0 20 20"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
