--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <div class="container header__container">
-        <a class="header__title" href="./index.html" rel="noopener noreferrer" target="_self">WebStudio</a>
+        <a class="header__title" href="./index.html" rel="noopener noreferrer" target="_self">Web<span style="color: #000">Studio</span></a>
         <nav class="header__navigation">
           <ul class="header__links list">
             <li class="header__item"><a class="header__link" href="./index.html">Estudio</a></li>
