--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebStudio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-  <!-- <link rel="stylesheet" href="./sass/main.min.css"/> -->
-  <link rel="stylesheet" href="./css/styles.css"/>
+  <link rel="stylesheet" href="./sass/main.css"/>
+  <!-- <link rel="stylesheet" href="./css/styles.css"/> -->
 </head>
 <body>
   <header class="header">
@@ -323,7 +323,7 @@
       <div class="footer__section">
       <ul class="footer__list list p-0">
         <li class="footer__item">
-          <a class="footer__link" href="./index.html" rel="noopener noreferrer" target="_self">WebStudio</a></li>
+          <a class="footer__link" href="./index.html" rel="noopener noreferrer" target="_self">Web<span style="color:#fff">Studio</span></a></li>
         <li class="footer__item">
         <address class="address">
         <ul class="address__list list p-0">
@@ -446,13 +446,11 @@
       <li><a href="" class="mobile__link mobile__link--social border">LinkedIn</a></li>
     </ul>
   </div>
-
   <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script defer src="./js/mobile-menu.js"></script>
 </body>
 </html>
