--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-    <!-- <link rel="stylesheet" href="./sass/main.min.css"/> -->
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./sass/main.css"/>
+    <!-- <link rel="stylesheet" href="./css/styles.css"/> -->
   </head>
   <body>
     <header class="header">
@@ -165,7 +165,7 @@
         <div class="footer__section">
         <ul class="footer__list list p-0">
           <li class="footer__item">
-            <a class="footer__link" href="./index.html" rel="noopener noreferrer" target="_self">WebStudio</a></li>
+            <a class="footer__link" href="./index.html" rel="noopener noreferrer" target="_self">Web<span style="color:#fff">Studio</span></a></li>
           <li class="footer__item">
           <address class="address">
           <ul class="address__list list p-0">
