--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebStudio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-  <link rel="stylesheet" href="./sass/main.css"/>
-  <!-- <link rel="stylesheet" href="./css/styles.css"/> -->
+  <!-- <link rel="stylesheet" href="./sass/main.css"/> -->
+  <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
   <header class="header">
@@ -451,6 +451,6 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"></script>
-    <script defer src="./js/mobile-menu.js"></script>
+    <script defer src="./js/menu.js"></script>
 </body>
 </html>
