--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>WebStudio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
   <!-- <link rel="stylesheet" href="./sass/main.css"/> -->
-  <link rel="stylesheet" href="./css/styles.css"/>
+  <link rel="stylesheet" href="./sass/main.min.css"/>
 </head>
 <body>
   <header class="header">
@@ -16,7 +16,7 @@
         <ul class="header__links list">
           <li class="header__item"><a class="header__link current" href="./index.html">Estudio</a></li>
           <li class="header__item"><a class="header__link" href="./portfolio.html">Portafolio</a></li>
-          <li class="header__item"><a class="header__link" href="#">Contactos</a></li>
+          <li class="header__item"><a class="header__link" href="#contact">Contactos</a></li>
         </ul>
       </nav>
       <ul class="header__contact list">
@@ -334,7 +334,7 @@
         </address>
       </li>
       </ul>
-      <div class= "footer__follow p-0">
+      <div class= "footer__follow p-0" id="contact">
         <h3 class="follow__title">ENCUENTRENOS EN</h3>
         <ul class="follow__list list p-0">
           <li class="follow__item">
