--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
     <!-- <link rel="stylesheet" href="./sass/main.css"/> -->
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./sass/main.min.css"/>
   </head>
   <body>
     <header class="header">
@@ -16,7 +16,7 @@
           <ul class="header__links list">
             <li class="header__item"><a class="header__link" href="./index.html">Estudio</a></li>
             <li class="header__item"><a class="header__link current" href="./portfolio.html">Portafolio</a></li>
-            <li class="header__item"><a class="header__link" href="#">Contactos</a></li>
+            <li class="header__item"><a class="header__link" href="#contact">Contactos</a></li>
           </ul>
         </nav>
         <ul class="header__contact list">
@@ -209,7 +209,7 @@
             </li>
           </ul>
         </div>
-        <div class= "footer__subscribe p-0">
+        <div class= "footer__subscribe p-0" id="contact">
           <h3 class="subscribe__title">SUSCRÍBASE AL BOLETÍN INFORMATIVO</h3>
           <form class="subscribe__form">
               <input class="subscribe__input" type="email" name="email" placeholder="Correo electrónico"/>
