--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modal</title>
+    <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./js/modal-info.js"></script>
     <script type="module" src="./js/index.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
     <section class="main">
-      <ul class="gallery__list list p-0">
-        <li class="gallery__item">
+      <ul class="gallery__list list p-0" id="gallery-list">
+        <li class="gallery__item" first-modal>
           <div class="gallery__container" data-modal-open="">
             <img
               class="gallery__img"
