--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./js/index.js"></script>
+    <link rel="stylesheet" href="../node_modules/notiflix/dist/notiflix-3.2.7.min.css">
+
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
@@ -29,5 +31,6 @@
     </section>
 
     <include src="./partials/modal-info.html"></include>
+    <script src="../node_modules/notiflix/dist/notiflix-3.2.7.min.js"></script>
   </body>
 </html>
